Rename VerifierContainer to VerificationResult & make it immutable
* Renamed UpdateStep to Builder, this is now used to construct the VerificationResult
* The VerificationResult cannot be updated with new values