@@ -25,20 +25,20 @@ package com.wolfyscript.utilities.verification;
 import java.util.*;
 import java.util.function.Consumer;
 
-class VerifierContainerImpl<T> implements VerifierContainer<T> {
+class VerificationResultImpl<T> implements VerificationResult<T> {
 
-    private ResultType type;
+    private final ResultType type;
     private final Set<String> faults;
     private final T value;
     private final Verifier<T> verifier;
-    private List<VerifierContainer<?>> children;
+    private final List<VerificationResult<?>> children;
 
-    public VerifierContainerImpl(T value, Verifier<T> verifier) {
-        this.type = ResultType.VALID;
+    private VerificationResultImpl(T value, Verifier<T> verifier, ResultType type, Set<String> faults, List<VerificationResult<?>> children) {
+        this.type = type;
         this.value = value;
-        this.faults = new HashSet<>();
+        this.faults = Collections.unmodifiableSet(faults);
         this.verifier = verifier;
-        this.children = List.of();
+        this.children = Collections.unmodifiableList(children);
     }
 
     @Override
@@ -52,7 +52,7 @@ class VerifierContainerImpl<T> implements VerifierContainer<T> {
     }
 
     @Override
-    public List<VerifierContainer<?>> children() {
+    public List<VerificationResult<?>> children() {
         return children;
     }
 
@@ -72,15 +72,10 @@ class VerifierContainerImpl<T> implements VerifierContainer<T> {
     }
 
     @Override
-    public UpdateStep<T> update() {
-        return new UpdateStepImpl();
-    }
-
-    @Override
     public boolean equals(Object obj) {
         if (obj == this) return true;
         if (obj == null || obj.getClass() != this.getClass()) return false;
-        var that = (VerifierContainerImpl<?>) obj;
+        var that = (VerificationResultImpl<?>) obj;
         return Objects.equals(this.type, that.type) &&
                 Objects.equals(this.faults, that.faults);
     }
@@ -107,53 +102,74 @@ class VerifierContainerImpl<T> implements VerifierContainer<T> {
             out.accept(prefix + "! " + fault);
         }
 
-        for (VerifierContainer<?> verifierContainer : children) {
-            if (verifierContainer instanceof VerifierContainerImpl<?> child) {
+        for (VerificationResult<?> verificationResult : children) {
+            if (verificationResult instanceof VerificationResultImpl<?> child) {
                 if (child.type() == ResultType.VALID) continue;
                 child.printToOut(level + 1, prefix + "   ", out);
             }
         }
     }
 
-    public class UpdateStepImpl implements UpdateStep<T> {
+    public static class BuilderImpl<T> implements Builder<T> {
 
-        public VerifierContainer<T> owner() {
-            return VerifierContainerImpl.this;
+        private ResultType type;
+        private final Verifier<T> verifier;
+        private final Set<String> faults;
+        private final T value;
+        private final List<VerificationResult<?>> children;
+
+        public BuilderImpl(Verifier<T> verifier, T value) {
+            this.verifier = verifier;
+            this.faults = new HashSet<>();
+            this.value = value;
+            this.children = new ArrayList<>();
         }
 
-        public UpdateStep<T> fault(String message) {
-            VerifierContainerImpl.this.faults.add(message);
+        @Override
+        public Optional<T> currentValue() {
+            return Optional.ofNullable(value);
+        }
+
+        @Override
+        public ResultType currentType() {
+            return type;
+        }
+
+        public Builder<T> fault(String message) {
+            this.faults.add(message);
             return this;
         }
 
         @Override
-        public UpdateStep<T> clearFaults() {
-            VerifierContainerImpl.this.faults.clear();
+        public Builder<T> clearFaults() {
+            this.faults.clear();
             return this;
         }
 
         @Override
-        public UpdateStep<T> valid() {
+        public Builder<T> valid() {
             return type(ResultType.VALID);
         }
 
         @Override
-        public UpdateStep<T> invalid() {
+        public Builder<T> invalid() {
             return type(ResultType.INVALID);
         }
 
         @Override
-        public UpdateStep<T> type(ResultType type) {
-            VerifierContainerImpl.this.type = type;
+        public Builder<T> type(ResultType type) {
+            this.type = type;
             return this;
         }
 
-        public UpdateStep<T> children(List<VerifierContainer<?>> children) {
-            List<VerifierContainer<?>> copyChildren = new ArrayList<>();
-            copyChildren.addAll(owner().children());
-            copyChildren.addAll(children);
-            VerifierContainerImpl.this.children = Collections.unmodifiableList(copyChildren);
+        public Builder<T> children(List<VerificationResult<?>> children) {
+            this.children.addAll(children);
             return this;
+        }
+
+        @Override
+        public VerificationResult<T> complete() {
+            return new VerificationResultImpl<>(value, verifier, type, faults, children);
         }
 
     }
